Fix dropdown menu items getting cut off towards bottom

--- a/skins/foundation/css/foundation.css
+++ b/skins/foundation/css/foundation.css
@@ -1756,7 +1756,7 @@ meta.foundation-mq-topbar {
 
 .top-bar {
   background: crimson;
-  height: 2.2rem;
+  height: 2.8125rem;
   line-height: 2.8125rem;
   margin-bottom: 0;
   overflow: hidden;
